tests/negative/typecheck/args-named-zero.orng
fn main() -> Int { 
    f(.x = 4)
}

fn f() -> Int { 
    4
}